--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 label.hello=Welcome to </br>Sushi Chef Club!
 label.menu=Menu
 label.back=Back
-label.create=Create your own SushiRoll
+label.create=Create SushiRoll
 label.createA=Big things have small beginnings
 label.createB=Continue create your own SushiRoll
 label.createC=Finishing touches
@@ -11,15 +11,35 @@ label.slogan=<br>Create.</br>Order.</br>Enjoy.
 label.step1=Step 1: Select the ingredients inside the roll.</br>(Maximum 4 ingredients, don't forget cream cheese, if necessary)
 label.step2=Step 2: Select the ingredient to cover the roll
 label.step3=Step 3: Check that the inside and cover of the roll have the necessary ingredients.</br>Then give the name to the roll
-label.step4=Your roll is amazing! Would you like to order it?
+label.step4=Your roll is amazing! You can order it from menu page!
 label.select=Select
-label.inside=Inside the roll
-label.cover=Cover the roll
+label.inside=Inside
+label.cover=Cover
 label.next=Next step
-label.name=Roll name
+label.name=Name
 label.total=Total
+label.order=Order
+label.weight=Weight
+label.price=Price
+label.yourOrder=Your order
+label.customerName=Name
+label.deliveryToAddress=Delivery To Address
+label.specifyAddress=Specify the delivery address as detailed as possible
+label.address=Address
+label.telephone=Telephone
+label.numberOfAppliances=Number Of Appliances
+label.payment=Payment
+label.selectPaymentMethod=Select Payment Method
+label.cashPayment=Cash Payment
+label.cardPayment=Card Payment
+label.comment=Comment
+label.orderComment=Order_Comment
+label.nameExample=Ivan_Petrovich_Semenov
+label.addressExample=st.Kosmonavtov,h.54,apt.312
 
-
+label.rollCollection=Roll collection
+label.created=You created
+label.rice=Sushi rice
 cheese=Cream Cheese
 tuna=Tuna
 salmon=Salmon
@@ -29,11 +49,47 @@ avocado=Avocado
 cheddar=Cheddar
 sesameBlack=Sesame Black
 sesameWhite=Sesame White
+unagi=Unagi
+wakame=Wakame
+tobicoB=Black Tobico
+tobicoO=Orange Tobico
+iceberg=Iceberg
+surimi=Surimi
+tomago=Tomago
 
+Kappa=Kappa
+Red=Red
+Rippa=Rippa
+Unagi=Unagi
+Classic=Classic
+Osaka=Osaka
+SurimiMaki=Surimi Maki
+PhiladelphiaWhite=Philadelphia White
+YinYang=Yin Yang
+FriedSalmon=Fried Salmon
+Bonito=Bonito
+MurugaiMaki=Murugai Maki
+PhiladelphiaVictoria=Philadelphia Victoria
+BaconMaki=Bacon Maki
+Everest=Everest
+Terriaki=Terriaki
+Alaska=Alaska
+TaiDragon=Tai Dragon
+BaliMaki=Bali
+
+label.maxSize=Warning: The name must not exceed 20 characters!
 label.noName=Warning: You did not enter the name!
 label.noIngredients=Warning: You don't chose ingredients!
 label.maxIngredients=Warning: You can choose maximum 4 ingredients!
 label.noIngredient=Warning: You don't chose ingredient!
 label.oneIngredient=Warning: You can choose only 1 ingredient!
+label.noAddress=Warning: You did not enter the address!
+label.noPhoneNumber=Warning: You did not enter the phone number!
+label.incorrectNumberSize=Warning: incorrect phone number!
+label.noRolls=Warning: You did not added rolls for order!
 label.search=Welcome to Search Page!
 label.exc=You already create roll with this ingredients!
+label.checkout=Checkout
+label.noCustomerName=Warning: You have not entered a name!
+label.noAppliances=Warning: Wrong number of sushi sticks!
+label.processed=Your order has been accepted.</br>Expect a call from our call-center to clarify the details of your order
